--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-    <h1>Bienvenidos!</h1>
-
+    <h1>Bienvenidoss!</h1>
+    
+    <p>Hola como podemos ayudarte?</p>
 </body>
 </html>
