--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="container-menu">
 	<div class="cont-menu">
 		<nav>
-			<a href="https://youtu.be/f-crQQnKyF8">Acción</a>
+			<a href="https://youtu.be/f-crQQnKyF8" target="_blank">Acción</a>
 			<a href="#">Terror</a>
 			<a href="#">Comedia</a>
                         <div class><div align=center><font color=red><p>GuaTV</p></div></font>
