--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUATV</title>
     <link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="index.css">
 	<br>
 	<br>
 	<br>
@@ -23,6 +24,17 @@
 
 
  <body>
+	<div class="resolucion">
+        <div class="desktop">
+            <h1>Esto es un ordenador</h1>
+        </div>
+        <div class="tablet">
+            <h1>Esto es un tablet</h1>
+        </div>
+        <div class="movil">
+            <h1>Esto es un movil</h1>
+        </div>
+    </div>
     <header class="header">
 		<div class="container">
 		<div class="btn-menu">
