--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 	<body bgcolor="blue">
 <head>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5009044901624119"
+     crossorigin="anonymous"></script>
+<!-- arroz -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5009044901624119"
+     data-ad-slot="9147845949"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
